k8s/base/observability/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    name: observability
    app.kubernetes.io/name: observability
    app.kubernetes.io/part-of: ai-part-designer
